--- a/client/public/index.html
+++ b/client/public/index.html
@@ -5,6 +5,10 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta property="og:title" content="Sarah Manter Portfolio" />
+    <meta property="og:image" content="../src/Images/profile_pic.jpg" />
+    <meta property="og:url" content="https://manter-react-portfolio.herokuapp.com/" />
+    <meta property="og:description" content="Sarah Manter's Portfolio" />
     <meta
       name="description"
       content="Web site created using create-react-app"
